Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -140,7 +140,8 @@
     \small \faPhone* \texttt{+91 7483724655} \hspace{1pt} $|$
     \hspace{1pt} \faEnvelope \hspace{2pt} \texttt{sanjay.kanakkot@gmail.com} \hspace{1pt} $|$ 
     \hspace{1pt} \faLinkedin \hspace{2pt} \texttt{\href{https://www.linkedin.com/in/sanjay-k-v/}{\myuline {Sanjay KV}}} \hspace{1pt} $|$
-    \hspace{1pt} \faGithub* \hspace{2pt}\texttt{{\href{https://github.com/sanjay-kv}{\myuline {sanjay-kv}}}}
+    \hspace{1pt} \faGithubSquare \hspace{2pt}\texttt{{\href{https://github.com/sanjay-kv}{\myuline {sanjay-kv}}}}
+     \hspace{5pt}\texttt{{\href{http://sanjaykv.com/} \faInfoCircle \hspace{2pt}}}
     \\ \vspace{-3pt}
 \end{center}
 
@@ -152,11 +153,11 @@
       {Recode Hive}{May. 2021 -- Present}
       {Head of Content (\href{https://recodehive.com/}{\myuline {recodehive.com}})}{Bangalore, India}
       \resumeItemListStart
-        \resumeItem{Grew channel to \textbf{12k subscribers in 5 Monts}; created 80+ videos on tech and productivity}
+        \resumeItem{Grew channel to \textbf{12k subscribers in 5 Months}; created 80+ videos on tech and productivity}
         \resumeItem{Conducted A/B testing on titles and thumbnails; \textbf{increased video impressions by 2.5M} in 3 months}
         \resumeItem{\textbf{Delivered 50+ talks} on ML, Data Science, Open source contributions.}
         \resumeItem{\textbf{Highlights}:
-            \href{https://www.youtube.com/watch?v=HhWUjp5pD0g}{\myuline {The Problem with Productivity Apps}}, \href{https://www.youtube.com/watch?v=ms4cWMsOITs}{\myuline {Obsidian App Review}},
+            \href{https://crowdsource.google.com/about/blog/community-spotlight-friendship/}{\myuline {Became Google CS Influencer}}, \href{https://adaptconvention.com/speakers/}{\myuline {Guest Speaker for Adapt Convention}},
             \href{https://www.youtube.com/watch?v=PkDbkyIR44w}{\myuline {Not-So-Minimal Desk Setup}}}
       \resumeItemListEnd
 
@@ -164,7 +165,7 @@
       {Larsen and Toubro Infotech - LTI}{Aug. 2018 -- May. 2021}
       {Software Engineer}{Bangalore, India}
       \resumeItemListStart
-        \resumeItem{Created Interactive dashboards and generated reports in SAP Cloud for Customers -C4C}
+        \resumeItem{Created Interactive dashboards and generated reports in SAP Cloud for Customers - C4C}
         \resumeItem{Worked on Power BI, Data Modeling with SAP raw data for Internal project with Team of 4.}
         \resumeItem{Developed over 110+ B2B and 20+ A2A interfaces for migration projects; \\ Completed 5 Projects, + created Inventory soft, automation tool to improve Team Productivity.}
 
@@ -229,9 +230,9 @@
 \section{SKILLS}
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
-     \textbf{Languages} {: Python, R, Git HTML/CSS, MySQL}\vspace{2pt} \\
-     \textbf{Frameworks}     {: Firebase, Numpy, Pandas Sklearn, TensorFlow} \\
-     \textbf{Tools}     {: PowerBI, Google Analytics, GitHub, VS Code, Jupyter, Postman}
+     \textbf{Languages} {: Python, R, Git, HTML/CSS, MySQL/MQL}\vspace{2pt} \\
+     \textbf{Frameworks}     {: Firebase, Numpy, Pandas Sklearn, TensorFlow, MongoDB} \\
+     \textbf{Tools}     {: PowerBI, Google Analytics, GitHub, VS Code, Jupyter, Postman, AWS, Tableau, Excel, WordPress, RStudio, SEO}
      
     }}
  \end{itemize}
