Made changes to the Experience section and removed extra activities.

--- a/main.tex
+++ b/main.tex
@@ -141,8 +141,8 @@
     \hspace{1pt} \faEnvelope \hspace{2pt} \texttt{sanjay.kanakkot@gmail.com} \hspace{1pt} $|$ 
     \hspace{1pt} \faLinkedin \hspace{2pt} \texttt{\href{https://www.linkedin.com/in/sanjay-k-v/}{\myuline {Sanjay KV}}} \hspace{1pt} $|$
     \hspace{1pt} \faGithubSquare \hspace{2pt}\texttt{{\href{https://github.com/sanjay-kv}{\myuline {sanjay-kv}}}}
-     \hspace{5pt}\texttt{{\href{http://sanjaykv.com/} \faInfoCircle \hspace{2pt}}}
-    \\ \vspace{-3pt}
+    \hspace{1pt} \faInfoCircle \hspace{2pt}\texttt{{\href{http://sanjaykv.com}{\myuline {Portfolio}}}}
+     
 \end{center}
 
 %-----------EXPERIENCE-----------
@@ -154,11 +154,10 @@
       {Head of Content (\href{https://recodehive.com/}{\myuline {recodehive.com}})}{Bangalore, India}
       \resumeItemListStart
         \resumeItem{Grew channel to \textbf{12k subscribers in 5 Months}; created 80+ videos on tech and productivity}
-        \resumeItem{Conducted A/B testing on titles and thumbnails; \textbf{increased video impressions by 2.5M} in 3 months}
         \resumeItem{\textbf{Delivered 50+ talks} on ML, Data Science, Open source contributions.}
         \resumeItem{\textbf{Highlights}:
-            \href{https://crowdsource.google.com/about/blog/community-spotlight-friendship/}{\myuline {Became Google CS Influencer}}, \href{https://adaptconvention.com/speakers/}{\myuline {Guest Speaker for Adapt Convention}},
-            \href{https://www.youtube.com/watch?v=PkDbkyIR44w}{\myuline {Not-So-Minimal Desk Setup}}}
+            \href{https://crowdsource.google.com/about/blog/community-spotlight-friendship/}{\myuline {Became Google CS Influencer}}, \href{https://adaptconvention.com/speakers/}{\myuline {Guest Speaker for Adapt International Convention}}.
+            }
       \resumeItemListEnd
 
     \resumeSubheading
@@ -167,15 +166,15 @@
       \resumeItemListStart
         \resumeItem{Created Interactive dashboards and generated reports in SAP Cloud for Customers - C4C}
         \resumeItem{Worked on Power BI, Data Modeling with SAP raw data for Internal project with Team of 4.}
-        \resumeItem{Developed over 110+ B2B and 20+ A2A interfaces for migration projects; \\ Completed 5 Projects, + created Inventory soft, automation tool to improve Team Productivity.}
+        \resumeItem{ Completed 5 Projects, Created Inventory tool which improved Team Productivity by\textbf{ 20 percentage}.}
 
     \resumeItemListEnd
 
     \resumeSubheading
       {Rigttway}{May 2018 -- Jul. 2018}
-      {SEO Consultant}{Kochi, Kerala}
+      {SEO Consultant - Freelance}{Kochi, Kerala}
       \resumeItemListStart
-        \resumeItem{Managed SEO, Google Analytics, helped to get \textbf{10k new Customers}}
+        \resumeItem{Managed SEO, Google Analytics, helped to get \textbf{10k new Customers and 150k Impressions.}}
         \resumeItem{Created Online presence, developed website, and carried out Marketing Campaigns.}
       \resumeItemListEnd
 
@@ -187,10 +186,10 @@
 \section{PROJECTS}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{Stackoverflow Survery Dataset}} {Sept. 2019 -- Mar. 2021}
+          {\textbf{Stackoverflow Survey Dataset}} {Sept. 2019 -- Mar. 2021}
           \resumeItemListStart
-            \resumeItem{Analysed Stack overflow survey data set of 3 years}
-            \resumeItem{Designed a \textbf{collaborative learning ecosystem} for students and parents with Trello, Miro, and Google Suite}
+            \resumeItem{Analysed Stack overflow survey data set of 3 years, and found highest payed Job, popular dev languages etc.}
+            \resumeItem{Predicted what causing\textbf{ Job Satisfaction}, Growth of Language using Machine Learning.}
           \resumeItemListEnd
           
         \resumeProjectHeading
@@ -214,7 +213,7 @@
             {\textbf{Achievement}: Selected as GitHub Campus Expert.}
         \resumeItemListEnd
   \resumeSubHeadingListEnd
-
+  
   \resumeSubHeadingListStart
     \resumeSubheading
       {SRM University}{June. 2014 -- May 2018}
@@ -232,7 +231,7 @@
     \small{\item{
      \textbf{Languages} {: Python, R, Git, HTML/CSS, MySQL/MQL}\vspace{2pt} \\
      \textbf{Frameworks}     {: Firebase, Numpy, Pandas Sklearn, TensorFlow, MongoDB} \\
-     \textbf{Tools}     {: PowerBI, Google Analytics, GitHub, VS Code, Jupyter, Postman, AWS, Tableau, Excel, WordPress, RStudio, SEO}
+     \textbf{Tools}     {: PowerBI, Google Analytics, GitHub, VS Code, Jupyter, Postman, AWS, Tableau, Excel, WordPress, RStudio}
      
     }}
  \end{itemize}
