Added Volunteer Experience

--- a/main.tex
+++ b/main.tex
@@ -139,8 +139,8 @@
     \textbf{\Huge Sanjay KV} \\ \vspace{5pt}
     \small \faPhone* \texttt{+91 7483724655} \hspace{1pt} $|$
     \hspace{1pt} \faEnvelope \hspace{2pt} \texttt{sanjay.kanakkot@gmail.com} \hspace{1pt} $|$ 
-    \hspace{1pt} \faLinkedin \hspace{2pt} \texttt{\href{https://www.linkedin.com/in/sanjay-k-v/}{\myuline {Sanjay KV}}} \hspace{1pt} $|$
-    \hspace{1pt} \faGithubSquare \hspace{2pt}\texttt{{\href{https://github.com/sanjay-kv}{\myuline {sanjay-kv}}}}
+    \hspace{1pt} \faLinkedin \hspace{2pt} \texttt{\href{https://www.linkedin.com/in/sanjay-k-v/}{\myuline {LinkedIn}}} \hspace{1pt} $|$
+    \hspace{1pt} \faGithubSquare \hspace{2pt}\texttt{{\href{https://github.com/sanjay-kv}{\myuline {Github}}}}
     \hspace{1pt} \faInfoCircle \hspace{2pt}\texttt{{\href{http://sanjaykv.com}{\myuline {Portfolio}}}}
      
 \end{center}
@@ -153,7 +153,7 @@
       {Recode Hive}{May. 2021 -- Present}
       {Head of Content (\href{https://recodehive.com/}{\myuline {recodehive.com}})}{Bangalore, India}
       \resumeItemListStart
-        \resumeItem{Grew channel to \textbf{12k subscribers in 5 Months}; created 80+ videos on tech and productivity}
+        \resumeItem{Scaled all social channels to \textbf{12k subscribers in 5 Months}; Focused on Data Science}
         \resumeItem{\textbf{Delivered 50+ talks} on ML, Data Science, Open source contributions.}
         \resumeItem{\textbf{Highlights}:
             \href{https://crowdsource.google.com/about/blog/community-spotlight-friendship/}{\myuline {Became Google CS Influencer}}, \href{https://adaptconvention.com/speakers/}{\myuline {Guest Speaker for Adapt International Convention}}.
@@ -165,18 +165,10 @@
       {Software Engineer}{Bangalore, India}
       \resumeItemListStart
         \resumeItem{Created Interactive dashboards and generated reports in SAP Cloud for Customers - C4C}
-        \resumeItem{Worked on Power BI, Data Modeling with SAP raw data for Internal project with Team of 4.}
+        \resumeItem{Worked on Power BI, \textbf{Data Modeling with SAP raw data for Internal project} with Team of 4.}
         \resumeItem{ Completed 5 Projects, Created Inventory tool which improved Team Productivity by\textbf{ 20 percentage}.}
 
     \resumeItemListEnd
-
-    \resumeSubheading
-      {Rigttway}{May 2018 -- Jul. 2018}
-      {SEO Consultant - Freelance}{Kochi, Kerala}
-      \resumeItemListStart
-        \resumeItem{Managed SEO, Google Analytics, helped to get \textbf{10k new Customers and 150k Impressions.}}
-        \resumeItem{Created Online presence, developed website, and carried out Marketing Campaigns.}
-      \resumeItemListEnd
 
   \resumeSubHeadingListEnd
 
@@ -188,31 +180,44 @@
       \resumeProjectHeading
           {\textbf{Stackoverflow Survey Dataset}} {Sept. 2019 -- Mar. 2021}
           \resumeItemListStart
-            \resumeItem{Analysed Stack overflow survey data set of 3 years, and found highest payed Job, popular dev languages etc.}
-            \resumeItem{Predicted what causing\textbf{ Job Satisfaction}, Growth of Language using Machine Learning.}
+            \resumeItem{Analysed Stack overflow \textbf{survey data set of 3 years}, and found highest payed Job, popular dev languages etc.}
+            \resumeItem{Predicted what causing Job Satisfaction, Growth of Language using Machine Learning.}
           \resumeItemListEnd
-          
-        \resumeProjectHeading
-          {\textbf{Semi Supervised Learning}}{Sept. 2020 -- Nov. 2020}
-          \resumeItemListStart
-            \resumeItem{Semi supervised Learning using LSTM RNN}
-          \resumeItemListEnd
+  
     \resumeSubHeadingListEnd
 
 
+%-----------VOLUNTEER EXPERIENCE-----------
+
+\section{VOLUNTEER EXPERIENCE}
+    \resumeSubHeadingListStart
+      \resumeProjectHeading
+          {\textbf{GitHub Campus Expert}} {Oct. 2021 -- present}
+          \resumeItemListStart
+            \resumeItem{Undergoing \textbf{6 Weeks of Training on GitHub} from GitHub Education Team.}
+         
+          \resumeItemListEnd
+  
+       \resumeProjectHeading
+          {\textbf{Google Crowdsource Influencer}} {Sept. 2019 -- Present}
+          \resumeItemListStart
+            \resumeItem{Delivered talks about ML, Deep Learning, and introduced Crowdsource \textbf{app to 5000+ people.}}
+            \resumeItem{Got recognition award from Google for mentoring 1st Google Seeds Program in Taiwan.}
+          \resumeItemListEnd
+          
+    \resumeSubHeadingListEnd
 
 %-----------EDUCATION-----------
 \section {EDUCATION}
   \resumeSubHeadingListStart
     \resumeSubheading
       {Macquarie University}{Feb 2021 -- Dec 2022}
-      {Masters in Data Science}{Sydney, NSW}
+      {Master of Data Science}{North Ryde, NSW}
       	\resumeItemListStart
     	\resumeItem {\textbf{Coursework}: Data Structures, Algorithms, Databases, Computer Systems, Machine Learning}
-        \resumeItem 
-            {\textbf{Achievement}: Selected as GitHub Campus Expert.}
+  
         \resumeItemListEnd
-  \resumeSubHeadingListEnd
+
   
   \resumeSubHeadingListStart
     \resumeSubheading
@@ -220,7 +225,7 @@
       {Bachelor in Technology}{Chennai, TN}
       	\resumeItemListStart
         \resumeItem 
-            {\textbf{Projects}: Published paper on (\href{https://acadpubl.eu/hub/2018-119-12/articles/5/1196.pdf}{\myuline {International Journal}}) (Adroid Robot), (\href{https://github.com/sanjay-kv/Multiple-image-Compression-Thesis}{\myuline {Image compression software}}). }
+            {\textbf{Projects}: Published paper on (\href{https://acadpubl.eu/hub/2018-119-12/articles/5/1196.pdf}{\myuline {International Journal}}) (Adroid Robot),  }
         \resumeItemListEnd
   \resumeSubHeadingListEnd
 
@@ -231,7 +236,7 @@
     \small{\item{
      \textbf{Languages} {: Python, R, Git, HTML/CSS, MySQL/MQL}\vspace{2pt} \\
      \textbf{Frameworks}     {: Firebase, Numpy, Pandas Sklearn, TensorFlow, MongoDB} \\
-     \textbf{Tools}     {: PowerBI, Google Analytics, GitHub, VS Code, Jupyter, Postman, AWS, Tableau, Excel, WordPress, RStudio}
+     \textbf{Tools}     {: PowerBI, Google Analytics, GitHub, VS Code, Jupyter, AWS, Excel, WordPress, RStudio}
      
     }}
  \end{itemize}
