--- a/main.tex
+++ b/main.tex
@@ -98,9 +98,9 @@
   \vspace{-1pt}\item
     \begin{tabular*}{\textwidth}[t]{l@{\extracolsep{\fill}}r}
       \textbf{#1} & {\color{dark-grey}\small #2}\vspace{1pt}\\ % top row of resume entry
-      \textit{#3} & {\color{dark-grey} \small #4}\\ % second row of resume entry
+      \text{#3} & {\color{dark-grey} \small #4}\\ % second row of resume entry
     \end{tabular*}\vspace{-4pt}
-}
+} 
 
 \newcommand{\resumeSubSubheading}[2]{
     \item
@@ -151,12 +151,12 @@
 
     \resumeSubheading
       {Recode Hive}{May. 2021 -- Present}
-      {Head of Content (\href{https://recodehive.com/}{\myuline {recodehive.com}})}{Bangalore, India}
+      {Founder/ Head of Content (\href{https://recodehive.com/}{\myuline {recodehive.com}})}{Bangalore, India}
       \resumeItemListStart
-        \resumeItem{Scaled all social channels to \textbf{12k subscribers in 5 Months}; Focused on Data Science}
-        \resumeItem{\textbf{Delivered 50+ talks} on ML, Data Science, Open source contributions.}
+        \resumeItem{Scaled all social channels to \textbf{12k subscribers in 5 Months}, Focused on data science}
+        \resumeItem{\textbf{Delivered 50+ talks} on ML, Data science, Open source contributions.}
         \resumeItem{\textbf{Highlights}:
-            \href{https://crowdsource.google.com/about/blog/community-spotlight-friendship/}{\myuline {Became Google CS Influencer}}, \href{https://adaptconvention.com/speakers/}{\myuline {Guest Speaker for Adapt International Convention}}.
+            \href{https://crowdsource.google.com/about/blog/community-spotlight-friendship/}{\myuline {Became Google CS Influencer}}, \href{https://adaptconvention.com/speakers/}{\myuline {Guest speaker for Adapt International Convention (2020,21)}}.
             }
       \resumeItemListEnd
 
@@ -164,9 +164,9 @@
       {Larsen and Toubro Infotech - LTI}{Aug. 2018 -- May. 2021}
       {Software Engineer}{Bangalore, India}
       \resumeItemListStart
-        \resumeItem{Created Interactive dashboards and generated reports in SAP Cloud for Customers - C4C}
-        \resumeItem{Worked on Power BI, \textbf{Data Modeling with SAP raw data for Internal project} with Team of 4.}
-        \resumeItem{ Completed 5 Projects, Created Inventory tool which improved Team Productivity by\textbf{ 20 percentage}.}
+        \resumeItem{Created Interactive dashboards and generated reports in SAP Cloud for customers - C4C}
+        \resumeItem{Worked on Power BI, \textbf{data Modeling with SAP raw data for Internal project} with Team of 4.}
+        \resumeItem{ Completed 5 Projects, created inventory tool which improved team productivity by\textbf{ 20 percentage}.}
 
     \resumeItemListEnd
 
@@ -181,7 +181,7 @@
           {\textbf{Stackoverflow Survey Dataset}} {Sept. 2019 -- Mar. 2021}
           \resumeItemListStart
             \resumeItem{Analysed Stack overflow \textbf{survey data set of 3 years}, and found highest payed Job, popular dev languages etc.}
-            \resumeItem{Predicted what causing Job Satisfaction, Growth of Language using Machine Learning.}
+            \resumeItem{Predicted what causing job satisfaction, Growth of language using machine learning.}
           \resumeItemListEnd
   
     \resumeSubHeadingListEnd
@@ -194,15 +194,15 @@
       \resumeProjectHeading
           {\textbf{GitHub Campus Expert}} {Oct. 2021 -- present}
           \resumeItemListStart
-            \resumeItem{Undergoing \textbf{6 Weeks of Training on GitHub} from GitHub Education Team.}
+            \resumeItem{Undergoing 6 Weeks of training on  \textbf{GitHub, diversity and Inclusion} from GitHub education Team.}
          
           \resumeItemListEnd
   
        \resumeProjectHeading
           {\textbf{Google Crowdsource Influencer}} {Sept. 2019 -- Present}
           \resumeItemListStart
-            \resumeItem{Delivered talks about ML, Deep Learning, and introduced Crowdsource \textbf{app to 5000+ people.}}
-            \resumeItem{Got recognition award from Google for mentoring 1st Google Seeds Program in Taiwan.}
+            \resumeItem{Got recognition award from Google for \textbf{mentoring 1st Google Seeds Program in Taiwan}. 4 month program.}
+            \resumeItem{Invited to Google Singapore office in recognition for the contribution done to the community.}
           \resumeItemListEnd
           
     \resumeSubHeadingListEnd
@@ -214,7 +214,7 @@
       {Macquarie University}{Feb 2021 -- Dec 2022}
       {Master of Data Science}{North Ryde, NSW}
       	\resumeItemListStart
-    	\resumeItem {\textbf{Coursework}: Data Structures, Algorithms, Databases, Computer Systems, Machine Learning}
+    	\resumeItem {\textbf{Coursework}: Data Structures, Algorithms, Database, Computer Systems, Machine Learning.}
   
         \resumeItemListEnd
 
@@ -222,10 +222,10 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {SRM University}{June. 2014 -- May 2018}
-      {Bachelor in Technology}{Chennai, TN}
+      {Bachelor in Technology - Computer Science}{Chennai, TN}
       	\resumeItemListStart
         \resumeItem 
-            {\textbf{Projects}: Published paper on (\href{https://acadpubl.eu/hub/2018-119-12/articles/5/1196.pdf}{\myuline {International Journal}}) (Adroid Robot),  }
+            {\textbf{Achievements}: Published paper on (\href{https://acadpubl.eu/hub/2018-119-12/articles/5/1196.pdf}{\myuline {International Journal}}), Program Coordinator for campus club - Andropedia }
         \resumeItemListEnd
   \resumeSubHeadingListEnd
 
@@ -234,10 +234,24 @@
 \section{SKILLS}
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
-     \textbf{Languages} {: Python, R, Git, HTML/CSS, MySQL/MQL}\vspace{2pt} \\
-     \textbf{Frameworks}     {: Firebase, Numpy, Pandas Sklearn, TensorFlow, MongoDB} \\
-     \textbf{Tools}     {: PowerBI, Google Analytics, GitHub, VS Code, Jupyter, AWS, Excel, WordPress, RStudio}
+     \textbf{Languages:} { Python, R, Git, HTML/CSS, MySQL/MQL}\vspace{2pt} \\
+     \textbf{Frameworks:} { Firebase, Numpy, Pandas Sklearn, TensorFlow, MongoDB} \\
+     \textbf{Tools:}     { PowerBI, Google Analytics, GitHub, VS Code, Jupyter, AWS, Excel, WordPress, RStudio}\
      
+    }}
+ \end{itemize}
+
+
+%-------------------------------------------
+
+%-----------PROGRAMMING SKILLS-----------
+\section{CERTIFICATIONS}
+ \begin{itemize}[leftmargin=0in, label={}]
+    \small{\item{
+           \resumeItemListStart
+            \resumeItem{Google Analytics certification Beginner and Intermediate, Google Data Studio certification. Expiry 2023}
+         
+          \resumeItemListEnd    
     }}
  \end{itemize}
 
