updated the layout and font stability.

--- a/main.tex
+++ b/main.tex
@@ -136,7 +136,7 @@
 
 %----------HEADING----------
 \begin{center}
-    \textbf{\Huge Sanjay KV} \\ \vspace{5pt}
+    \textbf{\Large SANJAY KANAKKOT VISWANATHAN} \\ \vspace{4pt}
     \small \faPhone* \texttt{+91 7483724655} \hspace{1pt} $|$
     \hspace{1pt} \faEnvelope \hspace{2pt} \texttt{sanjay.kanakkot@gmail.com} \hspace{1pt} $|$ 
     \hspace{1pt} \faLinkedin \hspace{2pt} \texttt{\href{https://www.linkedin.com/in/sanjay-k-v/}{\myuline {LinkedIn}}} \hspace{1pt} $|$
@@ -153,10 +153,10 @@
       {Recode Hive}{May. 2021 -- Present}
       {Founder/ Head of Content (\href{https://recodehive.com/}{\myuline {recodehive.com}})}{Bangalore, India}
       \resumeItemListStart
-        \resumeItem{Scaled all social channels to \textbf{12k subscribers in 5 Months}, Focused on data science}
-        \resumeItem{\textbf{Delivered 50+ talks} on ML, Data science, Open source contributions.}
+        \resumeItem{Launched ebook and courses. Scaled social media presence to \textbf{12k Followers in 6 months}}
+        \resumeItem{\textbf{Delivered 50+ talks} on ML, Data science, Open source contributions and taught 2000+ students. }
         \resumeItem{\textbf{Highlights}:
-            \href{https://crowdsource.google.com/about/blog/community-spotlight-friendship/}{\myuline {Became Google CS Influencer}}, \href{https://adaptconvention.com/speakers/}{\myuline {Guest speaker for Adapt International Convention (2020,21)}}.
+            \href{https://adaptconvention.com/speakers/}{\myuline {Guest speaker for Adapt Convention (2020,21)}}, GDG Germany, Girlscript- Rourkela.
             }
       \resumeItemListEnd
 
@@ -165,7 +165,7 @@
       {Software Engineer}{Bangalore, India}
       \resumeItemListStart
         \resumeItem{Created Interactive dashboards and generated reports in SAP Cloud for customers - C4C}
-        \resumeItem{Worked on Power BI, \textbf{data Modeling with SAP raw data for Internal project} with Team of 4.}
+        \resumeItem{Worked on Power BI, \textbf{data Modeling with SAP raw data for Internal project} with team of 4.}
         \resumeItem{ Completed 5 Projects, created inventory tool which improved team productivity by\textbf{ 20 percentage}.}
 
     \resumeItemListEnd
@@ -178,7 +178,7 @@
 \section{PROJECTS}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{Stackoverflow Survey Dataset}} {Sept. 2019 -- Mar. 2021}
+          {\textbf{Stack Overflow survey data Analysis}} {Sept. 2019 -- Mar. 2021}
           \resumeItemListStart
             \resumeItem{Analysed Stack overflow \textbf{survey data set of 3 years}, and found highest payed Job, popular dev languages etc.}
             \resumeItem{Predicted what causing job satisfaction, Growth of language using machine learning.}
@@ -194,7 +194,7 @@
       \resumeProjectHeading
           {\textbf{GitHub Campus Expert}} {Oct. 2021 -- present}
           \resumeItemListStart
-            \resumeItem{Undergoing 6 Weeks of training on  \textbf{GitHub, diversity and Inclusion} from GitHub education Team.}
+            \resumeItem{Undergoing 6 Weeks of training on  \textbf{GitHub, diversity and Inclusion} from GitHub education team.}
          
           \resumeItemListEnd
   
@@ -214,7 +214,7 @@
       {Macquarie University}{Feb 2021 -- Dec 2022}
       {Master of Data Science}{North Ryde, NSW}
       	\resumeItemListStart
-    	\resumeItem {\textbf{Coursework}: Data Structures, Algorithms, Database, Computer Systems, Machine Learning.}
+    	\resumeItem {\textbf{Coursework}: Data Structures, Algorithms, Database, Computer Systems, Machine learning.}
   
         \resumeItemListEnd
 
@@ -222,11 +222,8 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {SRM University}{June. 2014 -- May 2018}
-      {Bachelor in Technology - Computer Science}{Chennai, TN}
-      	\resumeItemListStart
-        \resumeItem 
-            {\textbf{Achievements}: Published paper on (\href{https://acadpubl.eu/hub/2018-119-12/articles/5/1196.pdf}{\myuline {International Journal}}), Program Coordinator for campus club - Andropedia }
-        \resumeItemListEnd
+      {Bachelor in Technology - Computer Science - CGPA 7.8/10}{Chennai, TN}
+
   \resumeSubHeadingListEnd
 
 %
@@ -249,8 +246,8 @@
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
            \resumeItemListStart
-            \resumeItem{Google Analytics certification Beginner and Intermediate, Google Data Studio certification. Expiry 2023}
-         
+            \resumeItem{Google Analytics certification Beginner and intermediate, Google Data Studio certification. Expiry 2023}
+         \resumeItem{LinkedIn Learning certification on diversity, inclusion, and belonging. }
           \resumeItemListEnd    
     }}
  \end{itemize}
