--- a/main.tex
+++ b/main.tex
@@ -156,7 +156,7 @@
         \resumeItem{Launched ebook and courses. Scaled social media presence to \textbf{12k Followers in 6 months}}
         \resumeItem{\textbf{Delivered 50+ talks} on ML, Data science, Open source contributions and taught 2000+ students. }
         \resumeItem{\textbf{Highlights}:
-            \href{https://adaptconvention.com/speakers/}{\myuline {Guest speaker for Adapt Convention (2020,21)}}, GDG Germany, Girlscript- Rourkela.
+            Guest speaker for\href{https://adaptconvention.com/speakers/}{\myuline { Adapt Convention (2020,21)}}, GDG Germany, Girlscript- Rourkela, Google CS events.
             }
       \resumeItemListEnd
 
@@ -164,7 +164,7 @@
       {Larsen and Toubro Infotech - LTI}{Aug. 2018 -- May. 2021}
       {Software Engineer}{Bangalore, India}
       \resumeItemListStart
-        \resumeItem{Created Interactive dashboards and generated reports in SAP Cloud for customers - C4C}
+        \resumeItem{Developed Interactive dashboards and generated reports in SAP Cloud for customers - C4C}
         \resumeItem{Worked on Power BI, \textbf{data Modeling with SAP raw data for Internal project} with team of 4.}
         \resumeItem{ Completed 5 Projects, created inventory tool which improved team productivity by\textbf{ 20 percentage}.}
 
@@ -180,8 +180,8 @@
       \resumeProjectHeading
           {\textbf{Stack Overflow survey data Analysis}} {Sept. 2019 -- Mar. 2021}
           \resumeItemListStart
-            \resumeItem{Analysed Stack overflow \textbf{survey data set of 3 years}, and found highest payed Job, popular dev languages etc.}
-            \resumeItem{Predicted what causing job satisfaction, Growth of language using machine learning.}
+            \resumeItem{Analysed Stack overflow \textbf{survey data set of 3 years}, and found highest payed Job, popular dev languages, etc.}
+            \resumeItem{Accomplished predicting what causing job satisfaction, Growth of language using machine learning.}
           \resumeItemListEnd
   
     \resumeSubHeadingListEnd
@@ -194,7 +194,7 @@
       \resumeProjectHeading
           {\textbf{GitHub Campus Expert}} {Oct. 2021 -- present}
           \resumeItemListStart
-            \resumeItem{Undergoing 6 Weeks of training on  \textbf{GitHub, diversity and Inclusion} from GitHub education team.}
+            \resumeItem{Undergoing 6 Weeks of training in \textbf{GitHub, diversity and inclusion} from GitHub education team.}
          
           \resumeItemListEnd
   
@@ -202,7 +202,7 @@
           {\textbf{Google Crowdsource Influencer}} {Sept. 2019 -- Present}
           \resumeItemListStart
             \resumeItem{Got recognition award from Google for \textbf{mentoring 1st Google Seeds Program in Taiwan}. 4 month program.}
-            \resumeItem{Invited to Google Singapore office in recognition for the contribution done to the community.}
+            \resumeItem{Invited to Google Singapore office in recognition of the contribution done to the community.}
           \resumeItemListEnd
           
     \resumeSubHeadingListEnd
@@ -246,7 +246,7 @@
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
            \resumeItemListStart
-            \resumeItem{Google Analytics certification Beginner and intermediate, Google Data Studio certification. Expiry 2023}
+            \resumeItem{Google Analytics certification Beginner and intermediate, Google Data Studio certification. Expiry 2023.}
          \resumeItem{LinkedIn Learning certification on diversity, inclusion, and belonging. }
           \resumeItemListEnd    
     }}
