Updated the structure

--- a/main.tex
+++ b/main.tex
@@ -151,7 +151,7 @@
 
     \resumeSubheading
       {Recode Hive}{May. 2021 -- Present}
-      {Founder/ Head of Content (\href{https://recodehive.com/}{\myuline {recodehive.com}})}{Bangalore, India}
+      {Founder/ Head of Content (\href{https://recodehive.com/}{\myuline {recodehive.com}})}{Kochi, India}
       \resumeItemListStart
         \resumeItem{Launched ebook and courses. Scaled social media presence to \textbf{12k Followers in 6 months}}
         \resumeItem{\textbf{Delivered 50+ talks} on ML, Data science, Open source contributions and taught 2000+ students. }
@@ -161,10 +161,10 @@
       \resumeItemListEnd
 
     \resumeSubheading
-      {Larsen and Toubro Infotech - LTI}{Aug. 2018 -- May. 2021}
+      {Larsen and Toubro Infotech Ltd. - LTI}{Aug. 2018 -- May. 2021}
       {Software Engineer}{Bangalore, India}
       \resumeItemListStart
-        \resumeItem{Developed Interactive dashboards and generated reports in SAP Cloud for customers - C4C}
+        \resumeItem{Developed interactive dashboards and generated reports in SAP Cloud for customers - C4C}
         \resumeItem{Worked on Power BI, \textbf{data Modeling with SAP raw data for Internal project} with team of 4.}
         \resumeItem{ Completed 5 Projects, created inventory tool which improved team productivity by\textbf{ 20 percentage}.}
 
@@ -201,8 +201,8 @@
        \resumeProjectHeading
           {\textbf{Google Crowdsource Influencer}} {Sept. 2019 -- Present}
           \resumeItemListStart
-            \resumeItem{Got recognition award from Google for \textbf{mentoring 1st Google Seeds Program in Taiwan}. 4 month program.}
-            \resumeItem{Invited to Google Singapore office in recognition of the contribution done to the community.}
+            \resumeItem{Got recognition award for \textbf{mentoring and training 1st Google Seeds program in Taiwan} for 4 months in 2021.}
+            \resumeItem{Featured on official Google blog and invited to Asia pacific office for proactive work done to the community.}
           \resumeItemListEnd
           
     \resumeSubHeadingListEnd
@@ -212,7 +212,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Macquarie University}{Feb 2021 -- Dec 2022}
-      {Master of Data Science}{North Ryde, NSW}
+      {Master of Data Science}{North Ryde, NSW, Australia}
       	\resumeItemListStart
     	\resumeItem {\textbf{Coursework}: Data Structures, Algorithms, Database, Computer Systems, Machine learning.}
   
@@ -222,7 +222,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {SRM University}{June. 2014 -- May 2018}
-      {Bachelor in Technology - Computer Science - CGPA 7.8/10}{Chennai, TN}
+      {Bachelor in Technology - Computer Science - CGPA 7.8/10}{Chennai, India}
 
   \resumeSubHeadingListEnd
 
@@ -246,7 +246,7 @@
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
            \resumeItemListStart
-            \resumeItem{Google Analytics certification Beginner and intermediate, Google Data Studio certification. Expiry 2023.}
+            \resumeItem{Google Analytics certification Beginner and intermediate, Google Data Studio certification - Expiry 2023.}
          \resumeItem{LinkedIn Learning certification on diversity, inclusion, and belonging. }
           \resumeItemListEnd    
     }}
