Final Skeleton update

--- a/main.tex
+++ b/main.tex
@@ -164,14 +164,26 @@
       {Larsen and Toubro Infotech Ltd. - LTI}{Aug. 2018 -- May. 2021}
       {Software Engineer}{Bangalore, India}
       \resumeItemListStart
-        \resumeItem{Developed interactive dashboards and generated reports in SAP Cloud for customers - C4C}
-        \resumeItem{Worked on Power BI, \textbf{data Modeling with SAP raw data for Internal project} with team of 4.}
+        \resumeItem{Developed interactive dashboards and generated reports in SAP Cloud for customers.}
+        \resumeItem{Worked on Power BI, \textbf{data modeling with SAP raw data for internal project} with team of 4.}
         \resumeItem{ Completed 5 Projects, created inventory tool which improved team productivity by\textbf{ 20 percentage}.}
 
     \resumeItemListEnd
 
   \resumeSubHeadingListEnd
+%-----------PROGRAMMING SKILLS-----------
+\section{SKILLS}
+ \begin{itemize}[leftmargin=0in, label={}]
+    \small{\item{
+     \textbf{Languages:} { Python, Git, HTML/CSS, MySQL}\vspace{2pt} \\
+     \textbf{Tools/ Frameworks:} { Numpy, Pandas, Sklearn, PowerBI, Google Analytics, AWS, Excel} \\
+     \textbf{Hobbies/ Other skills:} { WordPress, SEO, Blogging, Guitar, Opensource contribution at Legesher, Eddiehub org.}\
+     
+    }}
+ \end{itemize}
 
+
+%-------------------------------------------    
 
 %-----------PROJECTS-----------
 
@@ -185,27 +197,21 @@
           \resumeItemListEnd
   
     \resumeSubHeadingListEnd
-
+    
 
 %-----------VOLUNTEER EXPERIENCE-----------
-
 \section{VOLUNTEER EXPERIENCE}
-    \resumeSubHeadingListStart
-      \resumeProjectHeading
-          {\textbf{GitHub Campus Expert}} {Oct. 2021 -- present}
-          \resumeItemListStart
-            \resumeItem{Undergoing 6 Weeks of training in \textbf{GitHub, diversity and inclusion} from GitHub education team.}
-         
-          \resumeItemListEnd
+ \begin{itemize}[leftmargin=0in, label={}]
+    \small{\item{
+     \textbf{GitHub Campus Expert:} {Undergoing 6 Weeks of training in  from GitHub education team}\vspace{2pt} \\
+     \textbf{Google Crowdsource Influencer:} {Got recognition award for \textbf{mentoring and training} 1st Seeds program in Taiwan}\\
+          \textbf{Google Local guide:} Featured and invited to California office for proactive work done to the community and Google Maps.}}
   
-       \resumeProjectHeading
-          {\textbf{Google Crowdsource Influencer}} {Sept. 2019 -- Present}
-          \resumeItemListStart
-            \resumeItem{Got recognition award for \textbf{mentoring and training 1st Google Seeds program in Taiwan} for 4 months in 2021.}
-            \resumeItem{Featured on official Google blog and invited to Asia pacific office for proactive work done to the community.}
-          \resumeItemListEnd
-          
-    \resumeSubHeadingListEnd
+ \end{itemize}
+
+
+%-------------------------------------------
+
 
 %-----------EDUCATION-----------
 \section {EDUCATION}
@@ -227,19 +233,7 @@
   \resumeSubHeadingListEnd
 
 %
-%-----------PROGRAMMING SKILLS-----------
-\section{SKILLS}
- \begin{itemize}[leftmargin=0in, label={}]
-    \small{\item{
-     \textbf{Languages:} { Python, R, Git, HTML/CSS, MySQL/MQL}\vspace{2pt} \\
-     \textbf{Frameworks:} { Firebase, Numpy, Pandas Sklearn, TensorFlow, MongoDB} \\
-     \textbf{Tools:}     { PowerBI, Google Analytics, GitHub, VS Code, Jupyter, AWS, Excel, WordPress, RStudio}\
-     
-    }}
- \end{itemize}
 
-
-%-------------------------------------------
 
 %-----------PROGRAMMING SKILLS-----------
 \section{CERTIFICATIONS}
