Added Skills and modifications

--- a/main.tex
+++ b/main.tex
@@ -175,7 +175,7 @@
 \section{SKILLS}
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
-     \textbf{Languages:} { Python, Git, HTML/CSS, MySQL}\vspace{2pt} \\
+     \textbf{Programming:} { Python, Git, HTML, CSS, MySQL, R}\vspace{2pt} \\
      \textbf{Tools/ Frameworks:} { Numpy, Pandas, Sklearn, PowerBI, Google Analytics, AWS, Excel} \\
      \textbf{Hobbies/ Other skills:} { WordPress, SEO, Blogging, Guitar, Opensource contribution at Legesher, Eddiehub org.}\
      
@@ -203,7 +203,7 @@
 \section{VOLUNTEER EXPERIENCE}
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
-     \textbf{GitHub Campus Expert:} {Undergoing 6 Weeks of training in  from GitHub education team}\vspace{2pt} \\
+     \textbf{GitHub Campus Expert:} {Undergoing 6 Weeks of training in  from GitHub education team from Oct 15 2021.}\vspace{2pt} \\
      \textbf{Google Crowdsource Influencer:} {Got recognition award for \textbf{mentoring and training} 1st Seeds program in Taiwan}\\
           \textbf{Google Local guide:} Featured and invited to California office for proactive work done to the community and Google Maps.}}
   
@@ -227,8 +227,8 @@
   
   \resumeSubHeadingListStart
     \resumeSubheading
-      {SRM University}{June. 2014 -- May 2018}
-      {Bachelor in Technology - Computer Science - CGPA 7.8/10}{Chennai, India}
+      {SRM Institute of Science and Technology}{June. 2014 -- May 2018}
+      {Bachelor in Technology(B.Tech) - Computer Science - CGPA 7.8/10}{Chennai, India}
 
   \resumeSubHeadingListEnd
 
