Updated Skills Section

--- a/main.tex
+++ b/main.tex
@@ -177,7 +177,7 @@
     \small{\item{
      \textbf{Programming:} { Python, Git, HTML, CSS, MySQL, R}\vspace{2pt} \\
      \textbf{Tools/ Frameworks:} { Numpy, Pandas, Sklearn, PowerBI, Google Analytics, AWS, Excel} \\
-     \textbf{Hobbies/ Other skills:} { WordPress, SEO, Blogging, Guitar, Opensource contribution at Legesher, Eddiehub org.}\
+     \textbf{Hobbies/ Other skills:} { WordPress, SEO, Blogging, Guitar, Opensource contributor at Legesher, Eddiehub org.}\
      
     }}
  \end{itemize}
