--- a/main.tex
+++ b/main.tex
@@ -150,10 +150,10 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Recode Hive}{May. 2021 -- Present}
+      {Recode Hive}{May. 2021 -- Nov. 2021}
       {Founder/ Head of Content (\href{https://recodehive.com/}{\myuline {recodehive.com}})}{Kochi, India}
       \resumeItemListStart
-        \resumeItem{Launched ebook and courses. Scaled social media presence to \textbf{12k Followers in 6 months}}
+        \resumeItem{Launched ebook and courses. Scaled social media presence to \textbf{12k Followers in 6 months.}}
         \resumeItem{\textbf{Delivered 50+ talks} on ML, Data science, Open source contributions and taught 2000+ students. }
         \resumeItem{\textbf{Highlights}:
             Guest speaker for\href{https://adaptconvention.com/speakers/}{\myuline { Adapt Convention (2020,21)}}, GDG Germany, Girlscript- Rourkela, Google CS events.
@@ -166,7 +166,7 @@
       \resumeItemListStart
         \resumeItem{Developed interactive dashboards and generated reports in SAP Cloud for customers.}
         \resumeItem{Worked on Power BI, \textbf{data modeling with SAP raw data for internal project} with team of 4.}
-        \resumeItem{ Completed 5 Projects, created inventory tool which improved team productivity by\textbf{ 20 percentage}.}
+        \resumeItem{ Completed 5 Projects. Created inventory tool which improved team productivity by\textbf{ 20 percentage}.}
 
     \resumeItemListEnd
 
@@ -192,8 +192,8 @@
       \resumeProjectHeading
           {\textbf{Stack Overflow survey data Analysis}} {Sept. 2019 -- Mar. 2021}
           \resumeItemListStart
-            \resumeItem{Analysed Stack overflow \textbf{survey data set of 3 years}, and found highest payed Job, popular dev languages, etc.}
-            \resumeItem{Accomplished predicting what causing job satisfaction, Growth of language using machine learning.}
+            \resumeItem{Analysed Stack overflow \textbf{survey data set of 3 years}, and found highest paid job, popular dev languages, etc.}
+            \resumeItem{Accomplished predicting what caused job satisfaction, Growth of language using machine learning.}
           \resumeItemListEnd
   
     \resumeSubHeadingListEnd
