Updated the skills.

--- a/main.tex
+++ b/main.tex
@@ -177,7 +177,7 @@
     \small{\item{
      \textbf{Programming:} { Python, Git, HTML, CSS, MySQL, R}\vspace{2pt} \\
      \textbf{Tools/ Frameworks:} { Numpy, Pandas, Sklearn, PowerBI, Google Analytics, AWS, Excel} \\
-     \textbf{Hobbies/ Other skills:} { WordPress, SEO, Blogging, Guitar, Opensource contributor at Legesher, Eddiehub org.}\
+     \textbf{Hobbies/ Other skills:} { SEO, Blogging, Leadership, Opensource contributor at Legesher, Eddiehub org, Public Speaking}\
      
     }}
  \end{itemize}
@@ -204,7 +204,7 @@
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
      \textbf{GitHub Campus Expert:} {Undergoing 6 Weeks of training in  from GitHub education team from Oct 15 2021.}\vspace{2pt} \\
-     \textbf{Google Crowdsource Influencer:} {Got recognition award for \textbf{mentoring and training} 1st Seeds program in Taiwan}\\
+     \textbf{Google Crowdsource Influencer:} {Received recognition award for \textbf{mentoring and training} 1st Seeds program in Taiwan}\\
           \textbf{Google Local guide:} Featured and invited to California office for proactive work done to the community and Google Maps.}}
   
  \end{itemize}
@@ -217,7 +217,7 @@
 \section {EDUCATION}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Macquarie University}{Feb 2021 -- Dec 2022}
+      {Macquarie University}{Feb. 2021 -- Dec. 2022}
       {Master of Data Science}{North Ryde, NSW, Australia}
       	\resumeItemListStart
     	\resumeItem {\textbf{Coursework}: Data Structures, Algorithms, Database, Computer Systems, Machine learning.}
@@ -227,7 +227,7 @@
   
   \resumeSubHeadingListStart
     \resumeSubheading
-      {SRM Institute of Science and Technology}{June. 2014 -- May 2018}
+      {SRM Institute of Science and Technology}{June. 2014 -- May. 2018}
       {Bachelor in Technology(B.Tech) - Computer Science - CGPA 7.8/10}{Chennai, India}
 
   \resumeSubHeadingListEnd
