--- a/main.tex
+++ b/main.tex
@@ -165,7 +165,7 @@
       {Software Engineer}{Bangalore, India}
       \resumeItemListStart
         \resumeItem{Developed interactive dashboards and generated reports in SAP Cloud for customers.}
-        \resumeItem{Worked on Power BI, \textbf{data modeling with SAP raw data for internal project} with team of 4.}
+        \resumeItem{Worked on Power BI \textbf{data modeling with SAP raw data for internal project} with team of 4.}
         \resumeItem{ Completed 5 Projects. Created inventory tool which improved team productivity by\textbf{ 20 percentage}.}
 
     \resumeItemListEnd
@@ -192,7 +192,7 @@
       \resumeProjectHeading
           {\textbf{Stack Overflow survey data Analysis}} {Sept. 2019 -- Mar. 2021}
           \resumeItemListStart
-            \resumeItem{Analysed Stack overflow \textbf{survey data set of 3 years}, and found highest paid job, popular dev languages, etc.}
+            \resumeItem{Analysed Stack overflow \textbf{survey data set of 3 years}, and found highest paid job, programming languages, etc.}
             \resumeItem{Accomplished predicting what caused job satisfaction, Growth of language using machine learning.}
           \resumeItemListEnd
   
@@ -220,7 +220,7 @@
       {Macquarie University}{Feb. 2021 -- Dec. 2022}
       {Master of Data Science}{North Ryde, NSW, Australia}
       	\resumeItemListStart
-    	\resumeItem {\textbf{Coursework}: Data Structures, Algorithms, Database, Computer Systems, Machine learning.}
+    	\resumeItem {\textbf{Coursework}: Data Structures, Algorithms, Database, Machine learning, Big Data.}
   
         \resumeItemListEnd
 
