Updated the structure and errors

--- a/main.tex
+++ b/main.tex
@@ -171,19 +171,7 @@
     \resumeItemListEnd
 
   \resumeSubHeadingListEnd
-%-----------PROGRAMMING SKILLS-----------
-\section{SKILLS}
- \begin{itemize}[leftmargin=0in, label={}]
-    \small{\item{
-     \textbf{Programming:} { Python, Git, HTML, CSS, MySQL, R}\vspace{2pt} \\
-     \textbf{Tools/ Frameworks:} { Numpy, Pandas, Sklearn, PowerBI, Google Analytics, AWS, Excel} \\
-     \textbf{Hobbies/ Other skills:} { SEO, Blogging, Leadership, Opensource contributor at Legesher, Eddiehub org, Public Speaking}\
-     
-    }}
- \end{itemize}
 
-
-%-------------------------------------------    
 
 %-----------PROJECTS-----------
 
@@ -193,17 +181,30 @@
           {\textbf{Stack Overflow survey data Analysis}} {Sept. 2019 -- Mar. 2021}
           \resumeItemListStart
             \resumeItem{Analysed Stack overflow \textbf{survey data set of 3 years}, and found highest paid job, programming languages, etc.}
-            \resumeItem{Accomplished predicting what caused job satisfaction, Growth of language using machine learning.}
+            \resumeItem{Accomplished predicting what caused job satisfaction, Growth of language using machine learning. 
+            \href{https://github.com/sanjay-kv/Stackoverflow-Analysis}{\myuline {GitHub Link}}}
           \resumeItemListEnd
   
     \resumeSubHeadingListEnd
     
+%-----------PROGRAMMING SKILLS-----------
+\section{SKILLS}
+ \begin{itemize}[leftmargin=0in, label={}]
+    \small{\item{
+     \textbf{Programming:} { Python, Git, HTML, CSS, MySQL, R}\vspace{2pt} \\
+     \textbf{Tools/ Frameworks:} { Numpy, Pandas, Sklearn, PowerBI, Google Analytics, AWS, Excel} \\
+     \textbf{Hobbies/ Other skills:} { SEO, Blogging, Leadership, Public Speaking, Opensource contributor at Legesher, Eddiehub org}\
+     
+    }}
+ \end{itemize}
 
+
+%-------------------------------------------    
 %-----------VOLUNTEER EXPERIENCE-----------
 \section{VOLUNTEER EXPERIENCE}
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
-     \textbf{GitHub Campus Expert:} {Undergoing 6 Weeks of training in  from GitHub education team from Oct 15 2021.}\vspace{2pt} \\
+     \textbf{GitHub Campus Expert:} {Completed 6 Weeks of training from GitHub education team from Oct 15 2021.}\vspace{2pt} \\
      \textbf{Google Crowdsource Influencer:} {Received recognition award for \textbf{mentoring and training} 1st Seeds program in Taiwan}\\
           \textbf{Google Local guide:} Featured and invited to California office for proactive work done to the community and Google Maps.}}
   
