--- a/main.tex
+++ b/main.tex
@@ -154,7 +154,7 @@
       {Founder/ Head of Content (\href{https://recodehive.com/}{\myuline {recodehive.com}})}{Kochi, India}
       \resumeItemListStart
         \resumeItem{Launched ebook and courses. Scaled social media presence to \textbf{12k Followers in 6 months.}}
-        \resumeItem{\textbf{Delivered 50+ talks} on ML, Data science, Open source contributions and taught 2000+ students. }
+        \resumeItem{\textbf{Delivered 50+ talks} on ML, Data Science, Open source contributions and taught 2000+ students. }
         \resumeItem{\textbf{Highlights}:
             Guest speaker for\href{https://adaptconvention.com/speakers/}{\myuline { Adapt Convention (2020,21)}}, GDG Germany, Girlscript- Rourkela, Google CS events.
             }
@@ -165,7 +165,7 @@
       {Software Engineer}{Bangalore, India}
       \resumeItemListStart
         \resumeItem{Developed interactive dashboards and generated reports in SAP Cloud for customers.}
-        \resumeItem{Worked on Power BI \textbf{data modeling with SAP raw data for internal project} with team of 4.}
+        \resumeItem{Worked on Power BI \textbf{Data modeling with SAP raw data for internal project} with team of 4.}
         \resumeItem{ Completed 5 Projects. Created inventory tool which improved team productivity by\textbf{ 20 percentage}.}
 
     \resumeItemListEnd
@@ -180,8 +180,8 @@
       \resumeProjectHeading
           {\textbf{Stack Overflow survey data Analysis}} {Sept. 2019 -- Mar. 2021}
           \resumeItemListStart
-            \resumeItem{Analysed Stack overflow \textbf{survey data set of 3 years}, and found highest paid job, programming languages, etc.}
-            \resumeItem{Accomplished predicting what caused job satisfaction, Growth of language using machine learning. 
+            \resumeItem{Analysed Stack Overflow \textbf{survey data set of 3 years}, and found highest paid job, programming languages, etc.}
+            \resumeItem{Accomplished predicting what caused job satisfaction, Growth of language using Machine Learning. 
             \href{https://github.com/sanjay-kv/Stackoverflow-Analysis}{\myuline {GitHub Link}}}
           \resumeItemListEnd
   
@@ -206,7 +206,7 @@
     \small{\item{
      \textbf{GitHub Campus Expert:} {Completed 6 Weeks of training from GitHub education team from Oct 15 2021.}\vspace{2pt} \\
      \textbf{Google Crowdsource Influencer:} {Received recognition award for \textbf{mentoring and training} 1st Seeds program in Taiwan}\\
-          \textbf{Google Local guide:} Featured and invited to California office for proactive work done to the community and Google Maps.}}
+          \textbf{Google Local guide:} Added 1000+ km using Road mapper, Featured and invited to California office for proactive work.}}
   
  \end{itemize}
 
@@ -221,7 +221,7 @@
       {Macquarie University}{Feb. 2021 -- Dec. 2022}
       {Master of Data Science}{North Ryde, NSW, Australia}
       	\resumeItemListStart
-    	\resumeItem {\textbf{Coursework}: Data Structures, Algorithms, Database, Machine learning, Big Data.}
+    	\resumeItem {\textbf{Coursework}: Data Structures, Algorithms, Database, Machine Learning, Big Data.}
   
         \resumeItemListEnd
 
