Course work update

--- a/main.tex
+++ b/main.tex
@@ -221,7 +221,7 @@
       {Macquarie University}{Feb. 2021 -- Dec. 2022}
       {Master of Data Science}{North Ryde, NSW, Australia}
       	\resumeItemListStart
-    	\resumeItem {\textbf{Coursework}: Data Structures, Algorithms, Database, Machine Learning, Big Data.}
+    	\resumeItem {\textbf{Coursework}: Database, Machine Learning, Big Data, Applied Statistics}
   
         \resumeItemListEnd
 
