Added References section

--- a/main.tex
+++ b/main.tex
@@ -206,7 +206,7 @@
     \small{\item{
      \textbf{GitHub Campus Expert:} {Completed 6 Weeks of training from GitHub education team from Oct 15 2021.}\vspace{2pt} \\
      \textbf{Google Crowdsource Influencer:} {Received recognition award for \textbf{mentoring and training} 1st Seeds program in Taiwan}\\
-          \textbf{Google Local guide:} Added 1000+ km using Road mapper, Featured and invited to California office for proactive work.}}
+          \textbf{Google Local guide:} Added 10+ km using Road mapper, Featured and invited to California office for proactive work.}}
   
  \end{itemize}
 
@@ -242,11 +242,41 @@
     \small{\item{
            \resumeItemListStart
             \resumeItem{Google Analytics certification Beginner and intermediate, Google Data Studio certification - Expiry 2023.}
-         \resumeItem{LinkedIn Learning certification on diversity, inclusion, and belonging. }
+         \resumeItem{LinkedIn Learning certification on \textbf{diversity, inclusion, and belonging}. }
           \resumeItemListEnd    
     }}
  \end{itemize}
 
 
 %-------------------------------------------
+
+%-----------EDUCATION-----------
+\section {REFERENCES}
+  \resumeSubHeadingListStart
+    \resumeSubheading
+      {Pulkit Jain (Ex-colleague)}{Worked during Aug. 2018 -- May. 2021}
+      {Senior Business Analyst}{Bangalore, India}
+      	\resumeItemListStart
+    	\resumeItem {\textbf{Email}: pulkit.jain@tredence.com}
+      	\resumeItem {\textbf{Mob No}: +91 9940628145}
+  
+        \resumeItemListEnd
+
+  
+  \resumeSubHeadingListStart
+    \resumeSubheading
+      {Iswarya Balakrishnan(Ex- Crowdsource by Google PM)}{April. 2020 -- Sept. 2021}
+      {Strategic Partner Development Manager, Google Search}{Bangalore, India}
+	\resumeItemListStart
+    	\resumeItem {\textbf{Email}: ibalakrishnan@google.com}
+      	\resumeItem {\textbf{Mob No}: +91 6366256630}
+  
+        \resumeItemListEnd
+  \resumeSubHeadingListEnd
+
+%
 \end{document}
+%-----------PROGRAMMING SKILLS-----------
+
+
+
