Added Github CE Link + Google

--- a/main.tex
+++ b/main.tex
@@ -204,8 +204,10 @@
 \section{VOLUNTEER EXPERIENCE}
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
-     \textbf{GitHub Campus Expert:} {Completed 6 Weeks of training from GitHub education team from Oct 15 2021.}\vspace{2pt} \\
-     \textbf{Google Crowdsource Influencer:} {Received recognition award for \textbf{mentoring and training} 1st Seeds program in Taiwan}\\
+     \textbf{GitHub Campus Expert:} {Completed 6 Weeks of \href{https://githubcampus.expert/sanjay-kv/}
+{\myuline {training}} from GitHub education team from Oct 15 2021.}\vspace{2pt} \\
+     \textbf{Google Crowdsource Influencer:} {Received \href{https://crowdsource.google.com/about/blog/community-spotlight-friendship/}
+{\myuline {recognition}}recognition award for \textbf{mentoring and training} 1st Seeds program in Taiwan}\\
           \textbf{Google Local guide:} Added 10+ km using Road mapper, Featured and invited to California office for proactive work.}}
   
  \end{itemize}
