--- a/main.tex
+++ b/main.tex
@@ -150,7 +150,7 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Recode Hive}{May. 2021 -- Nov. 2021}
+      {Recode Hive}{May. 2021 -- June. 2021}
       {Founder/ Head of Content (\href{https://recodehive.com/}{\myuline {recodehive.com}})}{Kochi, India}
       \resumeItemListStart
         \resumeItem{Launched ebook and courses. Scaled social media presence to \textbf{12k Followers in 6 months.}}
@@ -192,7 +192,7 @@
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
      \textbf{Programming:} { Python, Git, HTML, CSS, MySQL, R}\vspace{2pt} \\
-     \textbf{Tools/ Frameworks:} { Numpy, Pandas, Sklearn, PowerBI, Google Analytics, AWS, Excel} \\
+     \textbf{Tools/ Frameworks:} { Numpy, Pandas, Sklearn, PowerBI, Google Analytics, AWS, Excel, Google Analytics, GTM} \\
      \textbf{Hobbies/ Other skills:} { SEO, Blogging, Leadership, Public Speaking, Opensource contributor at Legesher, Eddiehub org}\
      
     }}
@@ -207,7 +207,7 @@
      \textbf{GitHub Campus Expert:} {Completed 6 Weeks of \href{https://githubcampus.expert/sanjay-kv/}
 {\myuline {training}} from GitHub education team from Oct 15 2021.}\vspace{2pt} \\
      \textbf{Google Crowdsource Influencer:} {Received \href{https://crowdsource.google.com/about/blog/community-spotlight-friendship/}
-{\myuline {recognition}}recognition award for \textbf{mentoring and training} 1st Seeds program in Taiwan}\\
+{\myuline {recognition}} award for \textbf{mentoring and training} 1st Seeds program in Taiwan}\\
           \textbf{Google Local guide:} Added 10+ km using Road mapper, Featured and invited to California office for proactive work.}}
   
  \end{itemize}
@@ -257,7 +257,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Pulkit Jain (Ex-colleague)}{Worked during Aug. 2018 -- May. 2021}
-      {Senior Business Analyst}{Bangalore, India}
+      {Senior Business Analyst at Uber}{Bangalore, India}
       	\resumeItemListStart
     	\resumeItem {\textbf{Email}: pulkit.jain@tredence.com}
       	\resumeItem {\textbf{Mob No}: +91 9940628145}
