--- a/main.tex
+++ b/main.tex
@@ -191,9 +191,9 @@
 \section{SKILLS}
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
-     \textbf{Programming:} { Python, Git, HTML, CSS, SQL, R}\vspace{2pt} \\
-     \textbf{Tools/ Frameworks:} { Numpy, Pandas, Sklearn, PowerBI, Google Analytics, AWS, Excel, Google Analytics, Java Script} \\
-     \textbf{Hobbies/ Other skills:} { SEO, Blogging, Microsoft Office, Team Work}\
+     \textbf{Programming:} { Python, Git, HTML, CSS, MySQL, R}\vspace{2pt} \\
+     \textbf{Tools/ Frameworks:} { Numpy, Pandas, Sklearn, PowerBI, Google Analytics, AWS, Excel, Google Analytics, GTM} \\
+     \textbf{Hobbies/ Other skills:} { SEO, Blogging, Leadership, Public Speaking, Opensource contributor at Legesher, Eddiehub org}\
      
     }}
  \end{itemize}
