Resetting the resume

--- a/main.tex
+++ b/main.tex
@@ -192,8 +192,8 @@
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
      \textbf{Programming:} { Python, Git, HTML, CSS, MySQL, R}\vspace{2pt} \\
-     \textbf{Tools/ Frameworks:} { Numpy, Pandas, Sklearn, PowerBI, Google Analytics, AWS, Tableau} \\
-     \textbf{Hobbies/ Other skills:} { SEO, Communication, Leadership, Public Speaking, Teamwork, Leadership, Problem Solving, Data Analysis}\
+     \textbf{Tools/ Frameworks:} { Numpy, Pandas, Sklearn, PowerBI, Google Analytics, AWS, Excel, Google Analytics, GTM} \\
+     \textbf{Hobbies/ Other skills:} { SEO, Blogging, Leadership, Public Speaking, Opensource contributor at Legesher, Eddiehub org}\
      
     }}
  \end{itemize}
